--- a/Lets Musics.csproj
+++ b/Lets Musics.csproj
@@ -46,8 +46,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cadastro_Tela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cadastro_Tela.Designer.cs">
+      <DependentUpon>Cadastro_Tela.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login_Tela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login_Tela.Designer.cs">
+      <DependentUpon>Login_Tela.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Properties\Tela_Inicial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <EmbeddedResource Include="Cadastro_Tela.resx">
+      <DependentUpon>Cadastro_Tela.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login_Tela.resx">
+      <DependentUpon>Login_Tela.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
