--- a/Lets Musics.csproj
+++ b/Lets Musics.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -74,6 +75,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login_Tela.resx">
       <DependentUpon>Login_Tela.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Playlist_Tela.resx">
+      <DependentUpon>Playlist_Tela.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
