--- a/Lets Musics.csproj
+++ b/Lets Musics.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFriente_Tela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFriente_Tela.Designer.cs">
+      <DependentUpon>AddFriente_Tela.cs</DependentUpon>
+    </Compile>
     <Compile Include="Banda_Tela.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     <Compile Include="Torneio_Tela.Designer.cs">
       <DependentUpon>Torneio_Tela.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddFriente_Tela.resx">
+      <DependentUpon>AddFriente_Tela.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Banda_Tela.resx">
       <DependentUpon>Banda_Tela.cs</DependentUpon>
     </EmbeddedResource>
