--- a/Lets Musics.csproj
+++ b/Lets Musics.csproj
@@ -56,11 +56,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddFriente_Tela.cs">
+    <Compile Include="AddFriend_Tela.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddFriente_Tela.Designer.cs">
-      <DependentUpon>AddFriente_Tela.cs</DependentUpon>
+    <Compile Include="AddFriend_Tela.Designer.cs">
+      <DependentUpon>AddFriend_Tela.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdicionarMusica_Tela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdicionarMusica_Tela.Designer.cs">
+      <DependentUpon>AdicionarMusica_Tela.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Amigos_Tela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Amigos_Tela.Designer.cs">
+      <DependentUpon>Amigos_Tela.cs</DependentUpon>
     </Compile>
     <Compile Include="Banda_Tela.cs">
       <SubType>Form</SubType>
@@ -114,8 +126,14 @@
     <Compile Include="Torneio_Tela.Designer.cs">
       <DependentUpon>Torneio_Tela.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddFriente_Tela.resx">
-      <DependentUpon>AddFriente_Tela.cs</DependentUpon>
+    <EmbeddedResource Include="AddFriend_Tela.resx">
+      <DependentUpon>AddFriend_Tela.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdicionarMusica_Tela.resx">
+      <DependentUpon>AdicionarMusica_Tela.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Amigos_Tela.resx">
+      <DependentUpon>Amigos_Tela.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Banda_Tela.resx">
       <DependentUpon>Banda_Tela.cs</DependentUpon>
